--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="s1" rel="stylesheet" href="./src/style1.css">
     <link id="s2" rel="stylesheet" href="./src/style2.css" disabled=true>
+    <<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Lato&family=Oswald&family=Supermercado+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="main">
