Correções após Feedback

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div id="menu">
         <section id="starters">
-                <h2>Starters</h2>
+                <h2><span class="letter">S</span>tarters</h2>
                 <dl>
                     <dt>Crispy Fried Cauliflower</dt>
                     <dd>
@@ -44,7 +44,7 @@
         </section>
 
         <section id="soupssalads">
-                <h2>Soups and Salads</h2>
+                <h2><span class="letter">S</span>oups and Salads</h2>
                 <dl>
                     <dt>Tomato and Onion Soup</dt>
                     <dd>
@@ -65,7 +65,7 @@
         </section>
 
         <section id="entrees">
-                <h2>Entrees</h2>
+                <h2><span class="letter">E</span>ntrees</h2>
                 <dl>
                     <dt>Bread Sandwich Inception</dt>
                     <dd>
@@ -86,7 +86,7 @@
         </section>
 
         <section id="desserts">
-                <h2>Desserts</h2>
+                <h2><span class="letter">D</span>esserts</h2>
                 <dl>
                     <dt>Chocolate Volcano</dt>
                     <dd>
